<resources>
	<string name="hello">Hello World, MavericActivity!</string>
	<string name="app_name">Maverick</string>
	<string name="APP_PREF_NAME">MavericAppPreferencesString</string>
	<string name="LOGIN">LOGIN</string>
	<string name="LOGIN_TITLE_TEXT">Please enter your physical statics in the fields
		below
	</string>
	<string name="CURRENT_HEIGHT">Current height</string>
	<string name="CURRENT_WEIGHT">Current Weight</string>
	<string name="WAIST">Waist</string>
	<string name="HIP">Hip</string>
	<string name="DUMMY_STRING">Lorem Ipsum is simply dummy text of the printing
		and typesetting industry. Lorem Ipsum has been the industry s standard
		dummy text ever since the 1500s,
	</string>
	<string name="TARGET_HEIGHT">Target height</string>
	<string name="TARGET_WEIGHT">Target Weight</string>
	<string name="TARGET_HIP">Target Hip</string>
	<string name="CURRENT_BMI">Current BMI</string>
	<string name="MAVERIC_MEMBER">Maveric member</string>
	<string name="MAVERIC_MEMBER_ID">Maveric Id</string>
	<string name="WELCOME_LOGINSCREEN">Welcome to my Maverick,the on-the-go assistant for
		all your fitness needs.your workouts,your diet and your fitness
		plans-all in the palm of your hand
	</string>
	<string name="SIGNUP_LOGINSCREEN">To get started,enter your login details below
	</string>
	<string name="USER_NAME">user name(Email-Id)</string>
	<string name="EMAIL_ID">email id</string>
	<string name="PASSWORD">password</string>
	<string name="CONFORM_PWD">confirm password</string>
	<string name="DIET_TRACKER_EDITBOX_HINT">enter the food you had today</string>
	<string name="REQUIRE_FIELD_TOAST">Please fill all the values</string>
	<string name="SERVERNAME">http://122.165.34.103</string>
	<string name="RELATIVE_URL">/</string>
	<string name="PROJECT_NAME">maveric/web/app_dev.php/</string>
	<string name="PROFILE_SIGNUP_API">m/details/add</string>
	<string name="SIGNUP_FAILURE">Signup failure for due to some network problem
		please try again later
	</string>
	<string name="NO_INTERNET_CONNECTION">Internet connection required</string>
	<string name="EXCERISE_TYPE_DIALOG_HEAD"> Excerise Type</string>
	<string name="CALORIES_DIALOG_HEAD"> Calories</string>
	<string name="CENTIMETER">cm</string>
	<string name="KILOGRAMS">kg</string>
	<string name="INTRO_METABOLIC_QUES">This questionnaire is designed to help you
		determine the optimal macronutrient ratio (fats, proteins,
		carbohydrates) to begin the process of fine-tuning your body’s
		feedback mechanisms. For those of you who are not sure what a fat,
		protein, or carbohydrate is, let me simplify that for you. If the food
		comes from something that has a set of eyes, it is going to be higher
		in fats and proteins; fats and proteins most often come together in
		nature. Foods like vegetables, breads and cereals do not come from a
		source that has a set of eyes and are generally much higher in
		carbohydrates and lower in fat and protein. There are a few exceptions
		to this rule, such as nuts and avocados, which have no eyes, yet are
		high fat foods.

		When answering the questions, circle the answer that
		best describes the
		way you feel, not the way you think you should eat!
		If none of the
		answers suit you with regard to a particular question,
		simply don’t
		answer that question. If answer A suits you some of the
		time (in the
		morning but not the evening for example), and answer B
		suits you other
		times, you may circle both provided that the answers
		refer to how you
		may feel on any given day, not within a period of 24
		hours.
	</string>
	<string name="INTRO_WORKIN_QUES">Life is paradox! On the one

		hand \'Movement is
		life!\'
		So

		exercising is important.

		But equally true, the body

		will
		process every
		stimuli

		from the outer world only

		as a chemical process. So

		it is
		important to give

		time to the body to \'Rest

		and recoup\' from the

		ravages
		of the day. That is

		why in Maverick we insist

		on working IN as
		much as

		working OUT.

		The very word exercise

		means to exert energy. You

		can exert
		energy only if

		you have energy. So if

		working out is a way of

		exercising, working in is a

		method of energy builiding.

		Please take the
		time to

		learn the Zone exercises

		recommended for you. These

		are available
		both in

		pictorial cards as well as

		videos on the touchscreen.

		All
		Maverick trainers are

		equipped to teach you these

		exercises.

		When do you
		work in and when

		do you work out?

		If you have been feeling

		less energetic
		in the last

		few days, please take a few

		minutes to answer the

		following
		questions BEFORE

		you begin your work out!
	</string>
	<string name="MATABOLIC_QUERIES_TITLE">Metabolic Typing Questionnaire</string>
	<string name="YES_4"> DO NOT EXERCISE TODAY!</string>
	<string name="YES_3"> DO NOT DO any strenuous Cardio or heavy lifting!
	</string>
	<string name="YES_2">Take a few moments to perform some Work-In
		exercises before you begin Work-Out.
	</string>
	<string name="YES_1">Listen to your body! If you feel the issue is only
		transient, try to address it before going full throttle with your
		exercise routine.
	</string>
	<string name="FOOD_ITEM1">Item One</string>
	<string name="FOOD_ITEM2">Item Two</string>
	<string name="FOOD_ITEM3">Item Three</string>
	<string name="NO_INPUT">No Input Given</string>
	<string name="DIALOGMESSAGE">Are you sure you want to exit Maverick?</string>
	<string name="streesmanagement1">Human beings can go without food for several days;
		but nobody can go without sleep! Our body keeps
		oscillating between a
		sympathetic and parasympathetic response right through the
		day. Your
		sympathetic
		response is your ‘fight or flight’ response - the one that
		makes you stressed
		and active. Not all stress is
		bad! We need a certain
		amount of stress and drive to keep us growing. But
		the periods of
		sympathetic
		dominance should be backed by enough periods of
		parasympathetic response time.
		Parasympathetic
		refers to the ‘rest and
		recoup’ response of the body.
	</string>
	<string name="streesmanagement2"> It is the time for the daily routine work of the
		body -
		all your organs do their given jobs. However, if you go for long
		periods
		on a sympathetic dominant state,you are denying your body an
		opportunity to perform its daily routine work.
		Your sleeping hours are
		very important to ensure a healthy body. Your body
		takes its cues from
		the sun,
		like most living things on this planet. With the morning
		light, cortisol
		(the wake-up hormone) levels rise in
		the human body and,
		as the sun goes down, melatonin (the sleep hormone)
		levels rise.
		However, today’s
		lifestyle prompts many people to go to bed much later
		into the night. Your body
		does all physiological
		repairs between 10 PM
		and
	</string>
	<string name="streesmanagement3">2 AM. From 2 AM to 6 AM is the time for
		psychological repairs. So, unless you perform meditation
		regularly,
		your body needs to rest from 10 PM to 6 AM to perform all its daily
		chores. Also, if you ensure
		that you perform some kind of meditative
		exercises or some passive rest
		periods like listening to music
		or
		painting during each day, you will be giving your body enough time to
		recoup from the ravages of daily
		stress.
	</string>
	<string name="streesmanagement4">Breathing plays a very important role in ensuring
		your body gets enough oxygen. During times of stress,
		a deep breath
		will help calm your nerves. Take the effort to learn
		proper breathing
		techniques - not just
		when you exercise but right through your daily
		waking hours.
		Research shows that your DNA is nothing but potential
		that can get expressed
		only through the process
		of thinking. So, you
		should ensure that you always have positive
		thoughts. Counter any
		negative thinking
		with a positive approach.
	</string>
	<string name="knowyour1">
		Physical fitness is to the human body what fine-tuning is to an
		engine. It enables us to perform up to
		our potential. Fitness can be
		described as a condition that helps us
		look, feel and do our best. More
		specifically, it is:
		<i>“The ability to perform daily tasks vigorously and alertly, with
			energy left over for enjoying leisure-time
			activities and meeting
			emergency demands. It is the ability to endure, to bear
			up, to
			withstand stress,
			to carry on in circumstances where an unfit person
			could not continue,
			and is a major basis of good
			health and
			well-being.”
		</i>
	</string>
	<string name="knowyour2">Physical fitness involves the performance of the
		heart and lungs, and the muscles of the body. And,
		since what we do
		with our bodies also affects what we can do with our
		minds, fitness
		influences to
		some degree qualities such as mental alertness and
		emotional stability. As
		you undertake your fitness
		program, it is
		important to remember that fitness is an individual quality
		that varies
		from person to
		person. It is influenced by age, sex, heredity, personal
		habits, exercise and
		eating practices. You cannot
		do anything about the
		first three factors; however, it is within your
		power to change and
		improve the
		others where needed. Physical fitness is most easily
		understood by examining
		its components:-
	</string>
	<string name="knowyour3">
		<b>Cardio-Respiratory Endurance</b>
		- the ability to deliver oxygen and nutrients to tissues and to remove
		wastes over sustained periods of time. Long runs and swims are among
		the methods employed in
		measuring this component.
		<b>Muscular Strength</b>
		- the ability of a muscle to exert force for a brief period of time.
		Upper-body strength,
		for example, can be measured by various weight-
		lifting exercises.
		<b>Muscular Endurance </b>
		- the ability of a muscle, or a group of muscles, to sustain repeated
		contractions
		or to continue applying force against a fixed object.
		Pushups are often
		used to test endurance of arm
		and shoulder muscles.
	</string>
	<string name="knowyour4">
		<b>Flexibility</b>
		- the ability to move joints and use muscles through their full range
		of motion.
		The sit-and-reach test is a good measure of flexibility of
		the lower back
		and the backs of the
		upper legs.
		<b>Body Composition</b>
		- is often considered a component of fitness. It refers to the makeup
		of the body in terms of lean mass (muscle, bone, vital tissue and
		organs) and fat mass. An
		optimal ratio of fat to lean mass is an
		indication of fitness, and the right
		types of exercise will
		help you
		decrease body fat and increase/maintain muscle mass.
	</string>
	<string name="warmup1">
		<b>The Warm-Up and Cool-Down</b>
		\nBefore you start strength training, do five minutes of any activity
		that uses the muscles you\'ll be
		exercising, such as riding a
		stationary bike to warm up your legs or rowing for
		an all-body workout.
		Another alternative is to do a few repetitions of the exercises
		you\’ll be
		doing later with lighter weights.
		Five to ten minutes should
		be enough to increase the temperature of your
		muscles, making them more
		flexible and less susceptible to injury. If your heart rate goes above
		100
		beats per minute after you
		workout with weights, and you plan to do
		some floor exercises such as sit-ups
		and leg lifts, you need a
		cool-down to keep from getting dizzy or faint. Walk around or pedal
		slowly on a
		stationary bike until your
		heart rate slows down. Otherwise,
		you donot need a cool-down; just go ahead
		and stretch your muscles.
	</string>
</resources>