<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:background="@color/allpage_side_page_color"
	android:orientation="vertical">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<RelativeLayout
				android:id="@+id/maveric_title"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

				<ImageView
					android:id="@+id/maveric_title_image"
					android:layout_width="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_height="wrap_content"
					android:layout_marginRight="50dip"
					android:layout_marginTop="20dip"
					android:src="@drawable/maveric_tile" />
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginRight="20dip"
				android:background="@drawable/login_screen">
				<!-- slide title start -->
				<RelativeLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="10dip"
					android:id="@+id/slide_title"
					android:layout_marginTop="10dip"
					android:layout_marginLeft="-10dip"
					android:background="@drawable/all_page_side_curve">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@color/sidetext_title_color"
						android:textStyle="bold"
						android:text="@string/LOGIN" />
				</RelativeLayout>
				<!-- slide title end -->
				<!-- login default description wit image start -->
				<RelativeLayout
					android:layout_below="@+id/slide_title"
					android:id="@+id/LOGIN_TITLE"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="10dip"
						android:layout_alignParentLeft="true"
						android:layout_toLeftOf="@+id/image"
						android:text="@string/LOGIN_TITLE_TEXT" />
					<ImageView
						android:id="@+id/image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:background="@drawable/cycle" />
				</RelativeLayout>
				<!-- login default description wit image end -->
				<!-- editbox group start -->
				<LinearLayout
					android:layout_below="@+id/LOGIN_TITLE"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dip"
					android:layout_marginRight="20dip"
					android:layout_marginTop="-5dip"
					android:background="@drawable/trancparent_curve_all_page"
					android:id="@+id/editbox_group"
					android:orientation="vertical">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="5dip"
						android:text="@string/CURRENT_HEIGHT"
						android:textColor="@color/login_page_content_text_color" />
					<EditText
						android:id="@+id/login_height"
						android:layout_margin="10dip"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content" />
					
					<TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip"
                        android:text="@string/CURRENT_WEIGHT"
                        android:textColor="@color/login_page_content_text_color" />
                    <EditText
                        android:id="@+id/login_weight"
                        android:layout_margin="10dip"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip"
                        android:text="@string/WAIST"
                        android:textColor="@color/login_page_content_text_color" />
                    <EditText
                        android:id="@+id/login_waist"
                        android:layout_margin="10dip"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip"
                        android:text="@string/HIP"
                        android:textColor="@color/login_page_content_text_color" />
                    <EditText
                        android:id="@+id/login_hip"
                        android:layout_margin="10dip"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
				</LinearLayout>
				    <!-- editbox group end -->
			</RelativeLayout>

		</LinearLayout>
	</ScrollView>
	<!-- <RelativeLayout -->
	<!-- android:layout_width="fill_parent" -->
	<!-- android:layout_height="wrap_content" -->
	<!-- android:layout_alignParentBottom="true"> -->

	<!-- <include -->
	<!-- android:id="@+id/bottom" -->
	<!-- android:layout_width="wrap_content" -->
	<!-- android:layout_height="wrap_content" -->
	<!-- android:layout_alignParentLeft="true" -->
	<!-- android:layout_alignParentTop="true" -->
	<!-- layout="@layout/menu" /> -->
	<!-- </RelativeLayout> -->

</RelativeLayout>
