<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:background="@color/allpage_side_page_color"
	android:orientation="vertical">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<RelativeLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_margin="10dp">
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:background="@drawable/maveric_logo"
					android:layout_alignParentRight="true" />

			</RelativeLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginRight="15dip"
				android:orientation="vertical"
				android:background="@drawable/login_screen">
				<!-- slide title start -->
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_marginTop="15dip"
					android:src="@drawable/login_screen_side" />
				<!-- slide title end -->
				<!-- login default description wit image start -->
				<RelativeLayout
					android:id="@+id/LOGIN_TITLE"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView
						android:id="@+id/textView1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="10dip"
						android:layout_alignParentLeft="true"
						android:layout_toLeftOf="@+id/image"
						android:text="@string/LOGIN_TITLE_TEXT" />
					<ImageView
						android:id="@+id/image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:background="@drawable/login_screen_toy" />
				</RelativeLayout>
				<!-- login default description wit image end -->
				<!-- editbox group start -->
				<LinearLayout
					android:layout_below="@+id/LOGIN_TITLE"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dip"
					android:layout_marginRight="20dip"
					android:layout_marginTop="-5dip"
					android:background="@drawable/trancparent_curve_all_page"
					android:id="@+id/editbox_group"
					android:orientation="vertical">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="5dip"
						android:text="@string/MAVERIC_MEMBER"
						android:textColor="@color/login_page_content_text_color" />
					<RelativeLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content">
						<RadioButton
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/redio_yes"
							android:text="Yes" />
						<RadioButton
							android:layout_width="wrap_content"
							android:layout_toRightOf="@+id/redio_yes"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5dip"
							android:id="@+id/radio_no"
							android:text="No" />
					</RelativeLayout>
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="5dip"
						android:text="@string/MAVERIC_MEMBER_ID"
						android:textColor="@color/login_page_content_text_color" />
					<EditText
						android:id="@+id/CURRENT_BMI"
						android:layout_margin="10dip"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content" />
				</LinearLayout>
				<!-- editbox group end -->
				<RelativeLayout
					android:layout_width="fill_parent"
					android:padding="10dip"
					android:id="@+id/next"
					android:layout_margin="10dip"
					android:layout_height="wrap_content">
					<ImageView
						android:layout_width="wrap_content"
						android:layout_alignParentRight="true"
						android:src="@drawable/next"
						android:layout_height="wrap_content" />
				</RelativeLayout>
			</LinearLayout>

		</LinearLayout>
	</ScrollView>
	<!-- <RelativeLayout -->
	<!-- android:layout_width="fill_parent" -->
	<!-- android:layout_height="wrap_content" -->
	<!-- android:layout_alignParentBottom="true"> -->

	<!-- <include -->
	<!-- android:id="@+id/bottom" -->
	<!-- android:layout_width="wrap_content" -->
	<!-- android:layout_height="wrap_content" -->
	<!-- android:layout_alignParentLeft="true" -->
	<!-- android:layout_alignParentTop="true" -->
	<!-- layout="@layout/menu" /> -->
	<!-- </RelativeLayout> -->

</RelativeLayout>
